feat: links nav

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,39 @@
 <body>
     <header class="bg-[#222]">
         <div class="container mx-auto max-w-7xl">
-            <nav class="flex justify-between items-center">
+            <nav class="flex items-center justify-between">
                 <a href="index.html" class="link-logo">
                     <img src="imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex gap-8">
                     <li>
-                        <a href="index.html" class="text-white font-bold tracking-wider">Início</a>
+                        <a href="index.html" class="font-bold tracking-wider relative inline-block px-2 py-1
+                            text-[#fff]
+                            before:content-[''] before:absolute before:bottom-0 before:left-0
+                            before:w-full before:h-0.5
+                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
+                            before:origin-center before:transition-transform before:duration-300
+                            before:pointer-events-none">Início
+                        </a>
                     </li>
                     <li>
-                        <a href="sobre.html" class="text-white font-bold tracking-wider">Sobre o Projeto</a>
+                        <a href="sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1
+                            text-[#fff]
+                            before:content-[''] before:absolute before:bottom-0 before:left-0
+                            before:w-full before:h-0.5
+                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
+                            before:origin-center before:transition-transform before:duration-300
+                            before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="formulario.html" class="text-white font-bold tracking-wider">Contato</a>
+                        <a href="formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1
+                            text-[#fff]
+                            before:content-[''] before:absolute before:bottom-0 before:left-0
+                            before:w-full before:h-0.5
+                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
+                            before:origin-center before:transition-transform before:duration-300
+                            before:pointer-events-none">Contato</a>
                     </li>
                 </ul>
             </nav>
