--- a/src/index.html
+++ b/src/index.html
@@ -14,56 +14,49 @@
 <body>
     <header class="bg-[#222]">
         <div class="container mx-auto max-w-7xl">
-            <nav class="flex items-center justify-between">
+            <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
                 <a href="index.html" class="link-logo">
                     <img src="imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex gap-8">
                     <li>
-                        <a href="index.html" class="font-bold tracking-wider relative inline-block px-2 py-1
-                            text-[#fff]
-                            before:content-[''] before:absolute before:bottom-0 before:left-0
-                            before:w-full before:h-0.5
-                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
-                            before:origin-center before:transition-transform before:duration-300
-                            before:pointer-events-none">Início
+                        <a href="index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
                         </a>
                     </li>
                     <li>
-                        <a href="sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1
-                            text-[#fff]
-                            before:content-[''] before:absolute before:bottom-0 before:left-0
-                            before:w-full before:h-0.5
-                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
-                            before:origin-center before:transition-transform before:duration-300
-                            before:pointer-events-none">Sobre o Projeto</a>
+                        <a href="sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1
-                            text-[#fff]
-                            before:content-[''] before:absolute before:bottom-0 before:left-0
-                            before:w-full before:h-0.5
-                            before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100
-                            before:origin-center before:transition-transform before:duration-300
-                            before:pointer-events-none">Contato</a>
+                        <a href="formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="banner-predio">
-            <!--No background colocar imagem de predios-->
-            <span>Projeto Apartamento Senac</span>
+        <section class="relative h-[60vh] bg-cover bg-center flex items-center justify-center text-white px-4 before:absolute before:h-[60vh] before:w-full before:bg-[rgba(0,0,0,0.5)] flex flex-col" style="background-image: url('/src/imgs/image_banner.jpg')">
+            <span class="z-10 text-xl font-bold text-white sm:text-2xl md:text-4xl lg:text-6xl ">
+                Projeto Apartamento Senac
+            </span>
+            <span class="z-10 mt-4 text-sm text-white md:text-base">Onde inovação, natureza e aprendizado se encontram.
+            </span>
         </section>
-        <section class="back-projeto">
-            <div class="container">
-                <h2>Sobre o projeto</h2>
-                <p>Um novo empreendimento está surgindo no complexo universitário do SENAC Santo Amaro, o projeto foi desenvolvido pelos alunos de engenharia e será entregue logo após a pandemia.</p>
-                <p>Está localizado numa área de 154 mil metros quadrados, em Santo Amaro, na região sul da cidade de São Paulo. Conta com prédios modernos, horizontalmente distribuídos em meio a um parque com muito verde e a universidade internamente nas suas dependências.</p>
-                <img class="image-grid" src="imgs/imagem_projeto_900_631.jpg">
-                <a href="sobre.html" class="button-default">Saber mais</a>
+
+        <section class="bg-[#222] text-white py-20 text-center md:text-start">
+            <div class="container max-w-5xl mx-auto">
+                <div class="flex flex-col-reverse items-center justify-between gap-4 md:flex-row">
+                    <div class="w-full">
+                        <h2 class="mb-4 relative pb-2 inline-block before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Sobre o projeto</h2>
+                        <p class="mb-2">Um novo empreendimento está surgindo no complexo universitário do SENAC Santo Amaro, o projeto foi desenvolvido pelos alunos de engenharia e será entregue logo após a pandemia.</p>
+                        <p>Está localizado numa área de 154 mil metros quadrados, em Santo Amaro, na região sul da cidade de São Paulo. Conta com prédios modernos, horizontalmente distribuídos em meio a um parque com muito verde e a universidade internamente nas suas dependências.</p>
+                        <a href="sobre.html" class="mt-4 border-[#fff] border-2 py-3 px-4 rounded-lg inline-block font-bold tracking-wider hover:bg-[#fff] hover:text-[#222] duration-200 ease-in">Saber mais</a>
+                    </div>
+                    <div class="w-full">
+                        <img src="/src/imgs/image_index.jpg" alt="Imagem do projeto" class="object-cover w-full h-auto max-w-full shadow-md rounded-xl" />
+                    </div>
+                </div>
+
             </div>
         </section>
         <section class="back-form">
