feat: contact us/footer

--- a/src/index.html
+++ b/src/index.html
@@ -59,24 +59,35 @@
 
             </div>
         </section>
-        <section class="back-form">
-            <div class="container d-flex-column">
-                <h2>Entre em contato conosco</h2>
-                <p>Caso haja duvidas ou sugestões em relação a projeto, nos envie uma mensagem.</p>
-                <a href="formulario.html" class="button-default">Acessar formulário</a>
+        <section class="bg-[#fefefe] py-20 ">
+            <div class="container max-w-5xl mx-auto text-center">
+                <h2 class="mb-6 text-4xl relative pb-2 inline-block before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#222]">Fale com a gente
+                </h2>
+                <p class="text-lg mb-5 md:max-w-md mx-auto">Tem dúvidas, sugestões ou comentários sobre o projeto? Envie sua mensagem, ficaremos felizes em responder!
+                </p>
+                <a href="formulario.html" class="bg-[#222] py-3 px-4 rounded-lg text-white font-bold]">Acessar formulário</a>
             </div>
         </section>
     </main>
-    <footer class="rodape ">
-        <div class="container">
-            <h2>Redes sociais</h2>
-            <div class="d-flex">
-                <p class="icones"><a href=""><i class="fab fa-facebook-square"></i>Facebook</a></p>
-                <p class="icones"><a href=""><i class="fab fa-instagram-square"></i>Instagram</a></p>
-                <p class="icones"><a href=""><i class="fab fa-twitter"></i>Twitter</a></p>
-                <p class="icones"><a href=""><i class="fab fa-youtube"></i>Youtube</a></p>
+    <footer class="bg-[#222] pt-32">
+        <div class="container max-w-5xl mx-auto text-white">
+            <div class="flex flex-col md:flex-row justify-center items-center">
+                <div>
+                    <h2 class="mb-4 text-2xl relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <div class="flex justify-center items-center gap-4">
+                        <div class="flex flex-col md:flex-row gap-3">
+                            <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
+                            <span><a href="#"><i class="fab fa-instagram-square text-2xl"></i>Instagram</a></span>
+                        </div>
+                        <div class="flex flex-col md:flex-row gap-3">
+                            <span><a href="#"><i class="fab fa-twitter text-2xl"></i>Twitter</a></span>
+                            <span><a href="#"><i class="fab fa-youtube text-2xl"></i>Youtube</a></span>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <p class="copyText">Copyright &copy; 2021</p>
+
+            <p class="text-center mt-32 pb-4">Copyright &copy; 2025</p>
         </div>
     </footer>
 </body>
