fix: links to pages

--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,20 @@
     <header class="bg-[#222]">
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
-                <a href="index.html" class="link-logo">
+                <a href="/src/index.html" class="link-logo">
                     <img src="imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex gap-8">
                     <li>
-                        <a href="index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
+                        <a href="/src/index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
                         </a>
                     </li>
                     <li>
-                        <a href="sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
+                        <a href="/src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
+                        <a href="/src/pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -50,7 +50,7 @@
                         <h2 class="mb-4 relative pb-2 inline-block before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Sobre o projeto</h2>
                         <p class="mb-2">Um novo empreendimento está surgindo no complexo universitário do SENAC Santo Amaro, o projeto foi desenvolvido pelos alunos de engenharia e será entregue logo após a pandemia.</p>
                         <p>Está localizado numa área de 154 mil metros quadrados, em Santo Amaro, na região sul da cidade de São Paulo. Conta com prédios modernos, horizontalmente distribuídos em meio a um parque com muito verde e a universidade internamente nas suas dependências.</p>
-                        <a href="sobre.html" class="mt-4 border-[#fff] border-2 py-3 px-4 rounded-lg inline-block font-bold tracking-wider hover:bg-[#fff] hover:text-[#222] duration-200 ease-in">Saber mais</a>
+                        <a href="/src/pages/sobre.html" class="mt-4 border-[#fff] border-2 py-3 px-4 rounded-lg inline-block font-bold tracking-wider hover:bg-[#fff] hover:text-[#222] duration-200 ease-in">Saber mais</a>
                     </div>
                     <div class="w-full">
                         <img src="/src/imgs/image_index.jpg" alt="Imagem do projeto" class="object-cover w-full h-auto max-w-full shadow-md rounded-xl" />
@@ -65,7 +65,7 @@
                 </h2>
                 <p class="text-lg mb-5 md:max-w-md mx-auto">Tem dúvidas, sugestões ou comentários sobre o projeto? Envie sua mensagem, ficaremos felizes em responder!
                 </p>
-                <a href="formulario.html" class="bg-[#222] py-3 px-4 rounded-lg text-white font-bold]">Acessar formulário</a>
+                <a href="/src/pages/formulario.html" class="bg-[#222] py-3 px-4 rounded-lg text-white font-bold]">Acessar formulário</a>
             </div>
         </section>
     </main>
